add basic subscription data

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -20,16 +20,17 @@
     }
     scroll();
     $("#new_message").on("ajax:complete", function(e, data, status, xhr) {
-      var message = JSON.parse(data.responseText).message;
-      $(".messages ul").append("<li><p>" + message.body + "</p></li>");
       $("#message_body").val("");
       scroll();
     });
 
-  var socket = io('http://localhost:4200');
-  socket.on('message', function (data) {
-    console.log(data);
-  });
+    var socket = io('http://localhost:4200');
+    socket.on('message', function (data) {
+      console.log("message received:");
+      console.log(data);
+      var message = JSON.parse(data);
+      $(".messages ul").append("<li><p>" + message.body + "</p></li>");
+    });
   });
 
 
